5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4080/executions/1602_1015.log
== TEST (2019-03-21 13:20:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
int(input("valor a"))
int(input("valor b"))
int(input("valor c"))

-- OUTPUT:
primeiro_caso_de_teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:20:58) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
int(input("valor a "))
int(input("valor b "))
int(input("valor c "))

-- OUTPUT:
primeiro_caso_de_teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:24:51) 
-- CODE:
valor_a = int(input("valor a "))
valor_b = int(input("valor b "))
valor_c = int(input("valor c "))

maximo = max(valor_a,valor_b,valor_c)
print(maximo)
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:30:18) 
-- CODE:
valor_a = int(input("valor a "))
valor_b = int(input("valor b "))
valor_c = int(input("valor c "))

minimo = min(valor_a,valor_b,valor_c)
mediano = valor_a + valor_b + valor_c - minimo - maximo
maximo = max(valor_a,valor_b,valor_c)

print(mediano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mediano = valor_a + valor_b + valor_c - minimo - maximo
NameError: name 'maximo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:31:20) 
-- CODE:
valor_a = int(input("valor a "))
valor_b = int(input("valor b "))
valor_c = int(input("valor c "))

minimo = min(valor_a,valor_b,valor_c)
maximo = max(valor_a,valor_b,valor_c)
mediano = valor_a + valor_b + valor_c - minimo - maximo

print(mediano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mediano = valor_a + valor_b + valor_c - minimo - maximo
NameError: name 'maximo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:32:12) 
-- CODE:
valor_a = int(input("valor a "))
valor_b = int(input("valor b "))
valor_c = int(input("valor c "))

minimo = min(valor_a,valor_b,valor_c)
maximo = max(valor_a,valor_b,valor_c)
mediano = valor_a + valor_b + valor_c - minimo - maximo

print(mediano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mediano = valor_a + valor_b + valor_c - minimo - maximo
NameError: name 'maximo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:33:16) 
-- CODE:
valor_a = int(input("valor a "))
valor_b = int(input("valor b "))
valor_c = int(input("valor c "))

minimo = min(valor_a,valor_b,valor_c)
maximo = max(valor_a,valor_b,valor_c)
mediano = valor_a + valor_b + valor_c - minimo - maximo

print(manimo)
print(mediano)
print(maximo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(manimo)
NameError: name 'manimo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 13:33:49) 
-- CODE:
valor_a = int(input("valor a "))
valor_b = int(input("valor b "))
valor_c = int(input("valor c "))

minimo = min(valor_a,valor_b,valor_c)
maximo = max(valor_a,valor_b,valor_c)
mediano = valor_a + valor_b + valor_c - minimo - maximo

print(minimo)
print(mediano)
print(maximo)
-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 13:34:35) 
-- CODE:
valor_a = int(input("valor a "))
valor_b = int(input("valor b "))
valor_c = int(input("valor c "))

minimo = min(valor_a,valor_b,valor_c)
maximo = max(valor_a,valor_b,valor_c)
mediano = valor_a + valor_b + valor_c - minimo - maximo

print(minimo)
print(mediano)
print(maximo)
-- EXECUTION TIME:
0.150682
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
